moved things into one folder

--- a/parser/CMakeLists.txt
+++ b/parser/CMakeLists.txt
@@ -1,1 +1,9 @@
-add_library(parser parser.cpp)
+set(GEOMETRY_SRCS
+   grammer.hpp grammer.cpp
+   parser.hpp parser.cpp
+   tokenizer.hpp tokenizer.cpp
+)
+
+SET (LIB_TYPE STATIC)
+
+add_library (geometry ${LIB_TYPE} ${GEOMETRY_SRCS})
