working on segmenter

--- a/parsetree/CMakeLists.txt
+++ b/parsetree/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_library (parsetree parsetree.cpp )
+add_library (parsetree parsetree.cpp)
+add_library (segmenter segmenter.cpp)
+
+
+target_link_libraries(segmenter PRIVATE parsetree)
